# rvmparser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  linux-clang-ci.yml  linux.yml  msbuild.yml  publish.yml  win32-msvc-ci.yml
make/: Makefile
msvc15/: rvmparser.sln  rvmparser.vcxproj  rvmparser.vcxproj.filters
src/: AddGroupBBox.cpp  AddGroupBBox.h  AddStats.cpp  AddStats.h  Align.cpp  Arena.cpp  Arena.h  ChunkTiny.cpp  ChunkTiny.h  Colorizer.cpp  Colorizer.h  Common.cpp  Common.h  Connect.cpp  DiscardGroups.cpp  DumpNames.cpp  DumpNames.h  ExportGLTF.cpp  ExportJson.cpp  ExportJson.h  ExportOFF.cpp  ExportOFF.h  ExportObj.cpp  ExportObj.h  ExportRev.cpp  ExportSCAD.cpp  ExportSCAD.h  FindConnections.cpp  FindConnections.h  Flatten.cpp  Flatten.h  FlattenRegex.cpp  LinAlg.cpp  LinAlg.h  LinAlgOps.cpp  LinAlgOps.h  Parser.h  ParserAtt.cpp  ParserRVM.cpp  RVMParser.cpp  (+12 more)
test/: .gitignore  test-win32.bat
